# ticker-pulse-worker-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  format-all.sh  main.cpp
include/: http_client.h  quotes_worker.h  thread_pool.h
include/db/: postgres_connection.h
include/models/: news_model.h  quote_model.h
include/services/: news_worker.h  quotes_worker.h
include/utils/: common.h  common_utils.h  http_client.h  thread_pool.h
resources/: news_headers.json  quotes_headers.json
src/: http_client.cpp  main.cpp  quotes_worker.cpp  thread_pool.cpp
src/db/: postgres_connection.cpp
src/models/: news_model.cpp  quote_model.cpp
src/services/: news_worker.cpp  quotes_worker.cpp
src/utils/: common.cpp  common_utils.cpp  http_client.cpp  thread_pool.cpp
